# VulkanEngine

EntryPoint/: DebugLayer.cpp  DebugLayer.h  MainLayer.cpp  MainLayer.h  imgui.ini  main.cpp
EntryPoint/Assets/Shaders/: MyCompute.comp
EntryPoint/Cache/Shaders/: MyCompute.spv
scripts/: build.bat
src/: VulkanEngine.h  VulkanEnginePch.h
src/CMake/: CMakeLists.txt  VulkanEngineDeps.cmake
src/Core/: Application.cpp  Application.h  LifetimeManager.cpp  LifetimeManager.h  LogSystem.cpp  LogSystem.h
src/Core/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
src/ImGui/: ImGuiRenderer.cpp  ImGuiRenderer.h
src/Utility/: Utility.cpp  Utility.h
src/VulkanAbstraction/: VulkanMemoryAllocator.cpp  VulkanMemoryAllocator.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTypes.cpp  VulkanTypes.h
src/VulkanAbstraction/Core/: VulkanContext.cpp  VulkanContext.h  VulkanDebugger.cpp  VulkanDebugger.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanSurface.cpp  VulkanSurface.h
src/VulkanAbstraction/Descriptors/: VkDescriptorSetLayoutBuilder.cpp  VkDescriptorSetLayoutBuilder.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDescriptorSetAllocator.cpp  VulkanDescriptorSetAllocator.h  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h
src/VulkanAbstraction/Pipelines/: VkPipelineBuilder.cpp  VkPipelineBuilder.h  VkPipelineLayoutBuilder.cpp  VkPipelineLayoutBuilder.h
src/Window/: Window.cpp  Window.h
(+2 files in other folders)
